--- a/src/app/apps/chat/chat.component.html
+++ b/src/app/apps/chat/chat.component.html
@@ -90,7 +90,7 @@
                     <li class="clearfix">
                       <img src="assets/images/user/user3.jpg" alt="avatar">
                       <div class="about">
-                        <div class="name">Mike Clark</div>
+                        <div class="name">Mike Clarkkjsdojfsjdo</div>
                         <div class="status">
                           <i class="material-icons online">fiber_manual_record</i>
                           online </div>
