--- a/src/app/apps/chat/chat.component.html
+++ b/src/app/apps/chat/chat.component.html
@@ -108,7 +108,7 @@
                     <li class="clearfix">
                       <img src="assets/images/user/user5.jpg" alt="avatar">
                       <div class="about">
-                        <div class="name">Nancy Smith</div>
+                        <div class="name">Nancy Smit  ddh</div>
                         <div class="status">
                           <i class="material-icons online">fiber_manual_record</i>
                           online </div>
