--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -26,6 +26,8 @@
         </li>
         <!-- #END# Full Screen Button -->
         <li class="nav-item langSelItem" ngbDropdown>
+
+          uihiuuh
           <a ngbDropdownToggle class="lang-dropdown">
             <img *ngIf="flagvalue !== undefined" src="{{flagvalue}}" height="16">
             <img *ngIf="flagvalue === undefined" src="{{defaultFlag}}" height="16">
