--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
+.text{
+    font-family: Microsoft PhagsPa;
+}
+.full-screen-dialog .mat-dialog-container {
+    background-color: rgb(255, 255, 255);
+    border-radius: 10px;
+    height: 60%;
+    width: 450px;
+  }
+  @media (max-width: 600px) {
+    .full-screen-dialog .mat-dialog-container {
+      height: 100vh;
+      width: 100vw;
+    }
+  }
