Se completo el diseño de signup

--- a/src/app/pages/auth/signin/signin.component.html
+++ b/src/app/pages/auth/signin/signin.component.html
@@ -8,7 +8,7 @@
         <div class="form-section">
           <div class="auth-wrapper">
             <h1 class="welcome-msg text text-center"> Iniciar sesión </h1>
-            <p class="auth-signup-text text-muted">¿Necesita una cuenta?<a routerLink="/authentication/signup"
+            <p class="auth-signup-text text-muted">¿Necesita una cuenta?<a routerLink="/auth/signup"
                 class="sign-up-link">Registrarse
               </a></p>
             <form class="validate-form" [formGroup]="authForm" (ngSubmit)="onSubmit()">
