Finalise el diseño de recuperar contraseña

--- a/src/app/pages/auth/signin/signin.component.html
+++ b/src/app/pages/auth/signin/signin.component.html
@@ -41,7 +41,7 @@
               <div class="d-flex justify-content-between align-items-center mb-5">
                 <div class="form-check">
                 </div>
-                <a class="txt1" routerLink="/authentication/forgot-password">¿Has olvidado tu contraseña?</a>
+                <a class="txt1" routerLink="/auth/recover-pass">¿Has olvidado tu contraseña?</a>
               </div>
               <div *ngIf="error" class="alert alert-danger mt-3 mb-0">{{error}}</div>
               <div class="container-auth-form-btn">
