Diseño de publicasiones

--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -13,3 +13,19 @@
 .inicio-animacion {
   transition: width 0.5s ease;
 }
+.bcw{
+  background-color: white;
+}
+.menuC{
+  display: none;
+}
+@media (max-width: 767px) {
+  .menu{
+    display: none;
+  }
+}
+@media (min-width: 768px) {
+  .menuCe{
+    display: none;
+  }
+}
