--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,13 +1,19 @@
-<mat-toolbar>
+
+<div class="conteiner" style="overflow-x: hidden;">
+  <mat-toolbar>
     <app-header></app-header>
 </mat-toolbar>
-<div class="conteiner" style="width:  90%;">
-  <div class="row" >
-    <div class="col-1" [ngClass]="openMenu ? 'c1' : 'c2'"  [class.inicio-animacion]="iniciarAnimacion">
+  <div class="row"  >
+    <div class="col-1 menu" [ngClass]="openMenu ? 'c1' : 'c2'" [class.inicio-animacion]="iniciarAnimacion" 
+    style="position: fixed">
       One
     </div>
-    <div class="col">
-      One of three columns
+    <div class="col-1 menuCe" [ngClass]="openMenu ? ' menuC' : 'c1'" [class.inicio-animacion]="iniciarAnimacion" 
+    style="position: fixed">
+      One
+    </div>
+    <div class="col "style="height: 99%; overflow: auto">
+     
     </div>
   </div>
 </div>
