--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,13 +1,14 @@
 <mat-toolbar>
-    <app-header></app-header>
+  <app-header></app-header>
 </mat-toolbar>
-<div class="conteiner" style="width:  90%;">
-  <div class="row" >
-    <div class="col-1" [ngClass]="openMenu ? 'c1' : 'c2'"  [class.inicio-animacion]="iniciarAnimacion">
+<div class="conteiner" style="width: 90%">
+  <div class="row">
+    <div class="col-1" [ngClass]="openMenu ? 'c1' : 'c2'" [class.inicio-animacion]="iniciarAnimacion">
       One
     </div>
+
     <div class="col">
-      One of three columns
+      <app-select></app-select>
     </div>
   </div>
 </div>
