--- a/src/app/pages/home/select/select.component.html
+++ b/src/app/pages/home/select/select.component.html
@@ -1,5 +1,38 @@
+<div class="conteiner text">
+  <div class="row">
+    <div class="text-center">
+      <h3>¿Que quieres hacer?</h3>
+    </div>
+  </div>
+  <br>
+  <br>
+  <div class="row d-flex align-items-center justify-content-center">
+    <div style="width: 800px">
+      <div class="row ">
+        <div routerLink="/home/toktik" class="col d-flex align-items-center justify-content-center">
+          <div class="btnSect d-flex align-items-center justify-content-center">
+            <img
+            src="assets/images/text TokTik.png "
+            class="rounded d-block imOrVideoP"
+          />
+          </div>
+        </div>
+  
+        <div routerLink="/home/bookface" class="col d-flex align-items-center justify-content-center">
+          <div class="btnSect d-flex align-items-center justify-content-center">
+            <img
+            src="assets/images/Text BoookFace.png "
+            class="rounded d-block imOrVideoP1"
+          />
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+</div>
 
-    <div class="col" style="cursor: default;">
+<!-- <div class="col" style="cursor: default;">
       <div class="row justify-content-center">
         <div class="col-20">
           <div class="card bg-white">
@@ -34,5 +67,4 @@
       </div>
     </div>
 
-
-
+ -->
