--- a/src/app/pages/home/select/select.component.scss
+++ b/src/app/pages/home/select/select.component.scss
@@ -1,110 +1,27 @@
-.c1 {
-  width: 270px;
-  height: 93vh;
-  background-color: white;
-}
 
-.c2 {
-  width: 70px;
-  height: 93vh;
+.btnSect{
   background-color: white;
-}
-
-.inicio-animacion {
-  transition: width 0.5s ease;
-}
-
-.jumbotron {
-  background-color: white;
-  transition: background-color 0.3s ease;
-  cursor: pointer;
-  border: 2px solid rgb(241, 239, 239);
-  border-radius: 10px;
   width: 300px;
   height: 200px;
-
-  &:hover {
-    background-color: lightgray;
-  }
+  border-radius: 10px;
+  border: 2pt solid rgb(212, 206, 206);
+  margin-top: 20px;
 }
-
-.card-body {
+.btnSect:hover{
+  background-color: rgba(169, 169, 169, 0.852);
+  cursor: pointer;
+}
+.imOrVideoP {
+  display: flex;
+  justify-content: center;
   text-align: center;
-  display: flex;
-  flex-direction: column;
+  width: 60%;
+  height: auto;
 }
-
-.card-body h3 {
-  margin-top: 0;
-  font-weight: bold;
-  font-size: 20px;
-  text-align: left;
-  color: #333;
-  text-transform: uppercase;
-}
-
-.card-body .jumbotron {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  padding: 5px;
-}
-
-.card-body .jumbotron img {
-  max-width: 90%;
-  max-height: 90%;
-  object-fit: cover;
-  align-items: center;
-}
-
-.card-body .jumbotron h1 {
-  font-size: 18px;
-  margin: 0;
-  align-items: center;
-}
-
-.card-body .jumbotron .stretched-link {
-  display: none;
-}
-
-.card {
-  height: 600px;
-  width: 112%;
-  margin: 0 auto;
+.imOrVideoP1 {
   display: flex;
   justify-content: center;
-  align-items: center;
-}
-
-.container .row .col-md-4 {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 100px;
-}
-
-.card-body .jumbotron2 {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  padding: 5px;
-}
-
-.card-body .jumbotron2 img {
-  max-width: 80%;
-  max-height: 90%;
-  object-fit: cover;
-  align-items: center;
-}
-
-.card-body .jumbotron2 h1 {
-  font-size: 18px;
-  margin: 0;
-  align-items: center;
-}
-
-.card-body .jumbotron2 .stretched-link {
-  display: none;
+  text-align: center;
+  width: 94%;
+  height: auto;
 }
