El reguistro se conecto con la base de datos

--- a/src/app/pages/Dialog/dialog-signup-error/dialog-signup-error.component.html
+++ b/src/app/pages/Dialog/dialog-signup-error/dialog-signup-error.component.html
@@ -15,10 +15,10 @@
     <h3 class="text-center text">¡Mensaje de registro!</h3>
     
     <div class="row" style=" margin-top: 30px;">
-        <div class="col-2">  <mat-icon style="font-size: 50px">
+        <div class="col-2">  <mat-icon style="font-size: 50px; color: red;">
             <span class="material-symbols-outlined">
-                check_small
-            </span>
+                close
+                </span>
         </mat-icon></div>
         <div class="col-10 text text-Justified  d-flex align-items-center " > <h5>
             {{data}}
