--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,8 +10,8 @@
   }
   @media (max-width: 600px) {
     .full-screen-dialog .mat-dialog-container {
-      height: 100vh;
+      height: 100%;
       width: 100vw;
-      border-radius: 0px;
+
     }
   }
