--- a/src/app/pages/auth/change-password/change-password.component.html
+++ b/src/app/pages/auth/change-password/change-password.component.html
@@ -35,12 +35,20 @@
                   <mat-error
                     *ngIf="authForm.get('password').hasError('required')"
                   >
-                    Password is required
+                  La contraseña es requerida
+                  </mat-error>
+                  <mat-error
+                    *ngIf="authForm.get('password').hasError('invalidPassword')"
+                  >
+                    La contraseña debe cumplir con los siguientes requisitos: Al
+                    menos una letra mayúscula o minúscula. Al menos un dígito.
+                    Al menos un carácter especial de los siguientes: @, $, !, %,
+                    *, #, ? o &. Debe tener una longitud mínima de 8 caracteres.
                   </mat-error>
                 </mat-form-field>
               </div>
             </div>
-            <div class="row">
+            <div class="row mt-3">
               <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 mb-2">
                 <mat-form-field class="example-full-width" appearance="outline">
                   <mat-label>Confirma la nueva contraseña.</mat-label>
@@ -56,7 +64,12 @@
                   <mat-error
                     *ngIf="authForm.get('cpassword').hasError('required')"
                   >
-                    Confirm Password is required
+                 Confirma la nueva contraseña
+                </mat-error>
+                <mat-error
+                    *ngIf="authForm.get('password').hasError('invalidPassword')"
+                  >
+                    Las contraseñas no coinciden
                   </mat-error>
                 </mat-form-field>
               </div>
