--- a/src/app/pages/auth/recover-password/recover-password.component.html
+++ b/src/app/pages/auth/recover-password/recover-password.component.html
@@ -17,7 +17,7 @@
                       <mat-label>Email</mat-label>
                       <input matInput formControlName="email" required>
                       <mat-error *ngIf="authForm.get('email').hasError('required') || authForm.get('email').touched">
-                        Please enter a valid email address
+                       Porfavor ingresa el correo electronico
                       </mat-error>
                     </mat-form-field>
                   </div>
@@ -30,7 +30,7 @@
                 </div>
                 <div class="container-auth-form-btn">
                   <button mat-flat-button color="primary" class="auth-form-btn" [disabled]="!authForm.valid" type="submit">
-                    Registrarse
+                    Enviar Correo
                   </button>
                 </div>
               </form>
