--- a/src/app/pages/auth/signin/signin.component.html
+++ b/src/app/pages/auth/signin/signin.component.html
@@ -15,25 +15,26 @@
               <div class="row">
                 <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 mb-2">
                   <mat-form-field class="example-full-width" appearance="outline">
-                    <mat-label>Username</mat-label>
-                    <input matInput formControlName="username" />
-                    <mat-error *ngIf="authForm.get('username').hasError('required')">
-                      Username is required
-                    </mat-error>
+                    <mat-label>Correo</mat-label>
+                    <input matInput formControlName="email" />
+                    <mat-error *ngIf="authForm.get('email').hasError('required') || authForm.get('email').touched">
+                    Por favor, introduce una dirección de correo electrónico
+                    válida
+                  </mat-error>
                   </mat-form-field>
                 </div>
               </div>
               <div class="row">
                 <div class="col-xl-12col-lg-12 col-md-12 col-sm-12 mb-2">
                   <mat-form-field class="example-full-width" appearance="outline">
-                    <mat-label>Password</mat-label>
+                    <mat-label>Contraseña</mat-label>
                     <input matInput [type]="hide ? 'password' : 'text'" formControlName="password">
                     <a class="show-pwd-icon" href="#" onClick="return false;" matSuffix (click)="hide = !hide"
                       [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
                       <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
                     </a>
                     <mat-error *ngIf="authForm.get('password').hasError('required')">
-                      Password is required
+                      La contraseña es obligatoria 
                     </mat-error>
                   </mat-form-field>
                 </div>
@@ -47,7 +48,7 @@
               <div class="container-auth-form-btn">
                 <div style="text-align:center">
                   <button mat-raised-button color="primary" [class.auth-spinner]="loading" [disabled]="loading"
-                    class="auth-form-btn" [disabled]="!authForm.valid " type="submit">Inisio de sesion</button>
+                    class="auth-form-btn" [disabled]="!authForm.valid " type="submit">Iniciar Sesión</button>
                 </div>
               </div>
             </form>
