--- a/src/app/pages/facebook/header/header.component.html
+++ b/src/app/pages/facebook/header/header.component.html
@@ -6,7 +6,7 @@
           </div>
     </div>
     <div class="d-flex justify-content-end">
-        <p class="Opciones">Publicasiones</p>
-        <p class="Opciones">Notificasiones de Bookface</p>
+        <p class="Opciones">Publicaciones</p>
+        <p class="Opciones">Notificaciones de Bookface</p>
     </div>
 </div>
