--- a/src/app/pages/facebook/publications/publications.component.html
+++ b/src/app/pages/facebook/publications/publications.component.html
@@ -1,46 +1,30 @@
-<div class="container text">
-  <div
-    class="d-flex justify-content-center align-items-center"
-    style="margin-top: 20px"
-  >
+<!-- <div class="container text">
+  <div class="d-flex justify-content-center align-items-center" style="margin-top: 20px" *ngFor="let post of posts">
     <div class="conBookface">
       <div class="row margen10">
         <div class="col-1" style="margin-top: 5px">
-          <img src="" class="user_img" />
+          <img src="{{post.user.avatar}}" class="user_img" />
         </div>
         <div class="col align-items-center">
-          <div>David enrique lopez Juarez</div>
+          <div>{{post.user.name}}</div>
           <div>1 h</div>
         </div>
       </div>
-      <div class="margen10">Descripcion del la publicasion</div>
+      <div class="margen10">{{post.description}}</div>
       <div class="margen20">
         <div class="conImgPub">
-          <img
-            src="assets/images/pages/SH.png"
-            class="rounded d-block imOrVideoP"
-          />
+          <img src="{{post.multimedia}}" class="rounded d-block imOrVideoP" />
         </div>
       </div>
       <hr />
       <div class="row">
         <div class="col d-flex align-items-center justify-content-center">
-          <mat-icon
-            ><span class="material-icons-outlined">
-              thumb_up_off_alt
-            </span></mat-icon
-          >
-          Me gusta
+          <mat-icon matBadge="{{post.numLike}}"><span class="material-icons-outlined">thumb_up_off_alt</span></mat-icon>
         </div>
-        <div
-          (click)="activateComments()"
-          class="col d-flex align-items-center justify-content-center"
-        >
-          <mat-icon
-            ><span class="material-icons-outlined">
+        <div (click)="activateComments()" class="col d-flex align-items-center justify-content-center">
+          <mat-icon><span class="material-icons-outlined">
               chat_bubble_outline
-            </span></mat-icon
-          >
+            </span></mat-icon>
           Comentarios
         </div>
       </div>
@@ -50,19 +34,15 @@
           <div class="col">
             <div class="row">
               <div class="col d-flex align-items-center justify-content-center">
-                <mat-icon
-                  ><span class="material-icons-outlined">
+                <mat-icon><span class="material-icons-outlined">
                     thumb_up_off_alt
-                  </span></mat-icon
-                >
+                  </span></mat-icon>
                 2k
               </div>
               <div class="col d-flex align-items-center">
-                <mat-icon
-                  ><span class="material-icons-outlined">
+                <mat-icon><span class="material-icons-outlined">
                     chat_bubble_outline
-                  </span></mat-icon
-                >
+                  </span></mat-icon>
                 3k
               </div>
             </div>
@@ -82,25 +62,16 @@
               <div class="row">
                 <div class="col">
                   <div class="row">
-                    <div
-                      class="col d-flex align-items-center justify-content-center"
-                    >
-                      <mat-icon
-                        ><span class="material-icons-outlined">
+                    <div class="col d-flex align-items-center justify-content-center">
+                      <mat-icon><span class="material-icons-outlined">
                           thumb_up_off_alt
-                        </span></mat-icon
-                      >
+                        </span></mat-icon>
                       2k
                     </div>
-                    <div
-                      (click)="activateSubComments()"
-                      class="col d-flex align-items-center"
-                    >
-                      <mat-icon
-                        ><span class="material-icons-outlined">
+                    <div (click)="activateSubComments()" class="col d-flex align-items-center">
+                      <mat-icon><span class="material-icons-outlined">
                           chat_bubble_outline
-                        </span></mat-icon
-                      >
+                        </span></mat-icon>
                       3k
                     </div>
                   </div>
@@ -123,11 +94,9 @@
                   <div class="col">
                     <div class="row">
                       <div class="col d-flex align-items-center">
-                        <mat-icon
-                          ><span class="material-icons-outlined">
+                        <mat-icon><span class="material-icons-outlined">
                             thumb_up_off_alt
-                          </span></mat-icon
-                        >
+                          </span></mat-icon>
                         2k
                       </div>
                     </div>
@@ -151,4 +120,51 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
+
+
+
+<section class="content">
+  <div class="content-block">
+    <div class="row">
+      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+        <div class="card">
+          <div class="body">
+            <div class="wrapper">
+              <main class="main">
+                  <mat-card class="example-card" *ngFor="let post of posts" [@pageTransition]>
+                    <mat-card-header>
+                      <div mat-card-avatar class="example-header-image"  style="background-image:url('{{post.user.avatar}}')"></div>
+                      <mat-card-title>{{post.user.name}} {{post.user.fatherLastName}} {{post.user.motherLastName}}</mat-card-title>
+                      <mat-card-subtitle>Fecha</mat-card-subtitle>
+                    </mat-card-header>
+
+                    <mat-card-content>
+                      <p class="postText">
+                        {{post.description}}
+                      </p>
+                    </mat-card-content>
+
+                    <img mat-card-image src="{{post.multimedia}}" alt="No se puede visualizar la imagen">
+                    
+                    <mat-card-actions>
+                      <button mat-button color="primary" [ngClass]="{'liked': postLiked}" (click)="toggleLike()">
+                        <mat-icon matBadge="{{post.numLike}}">thumb_up_off_alt</mat-icon>
+                        LIKE
+                      </button>
+                      
+                        <button mat-button color="primary"><mat-icon>chat_bubble_outline</mat-icon>
+                          Comentarios</button>
+                      </mat-card-actions>
+                  </mat-card>
+
+                  <mat-paginator *ngIf="posts.length>0" showFirstLastButtons [length]="lengthPost" [pageSize]="pageSize" (page)="onPageChange($event)"></mat-paginator>
+
+              </main>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
