Funcionalidad de publicaciones

--- a/src/app/pages/facebook/header/header.component.scss
+++ b/src/app/pages/facebook/header/header.component.scss
@@ -1,10 +1,15 @@
-.navar{
-    background-color: white;
-    height: 65px;
-    border:2px solid rgba(255, 255, 255, 0.721) ;
-}
 .Opciones{
     font-size: 18px;
     color: rgba(41, 41, 246, 0.751);
     margin-right: 20px;
+}
+
+.navbarHeader{
+    min-height: calc(0vh - 76px) !important;
+    margin-top: 0px !important;
+    margin-bottom: 0px !important;
+}
+
+.inputF{
+    margin-top: 50px;
 }
