--- a/src/app/pages/facebook/publications/publications.component.html
+++ b/src/app/pages/facebook/publications/publications.component.html
@@ -1,5 +1,8 @@
 <!-- <div class="container text">
-  <div class="d-flex justify-content-center align-items-center" style="margin-top: 20px" *ngFor="let post of posts">
+  <div
+    class="d-flex justify-content-center align-items-center"
+    style="margin-top: 20px"
+  >
     <div class="conBookface">
       <div class="row margen10">
         <div class="col-1" style="margin-top: 5px">
@@ -120,7 +123,7 @@
       </div>
     </div>
   </div>
-</div> -->
+</div>  -->
 
 
 
@@ -166,7 +169,7 @@
                         </p>
                       </mat-card-content>
 
-                      <img mat-card-image src="{{post.multimedia}}" alt="No se puede visualizar la imagen">
+                      <img mat-card-image m-1 src="{{post.multimedia}}" alt="No se puede visualizar la imagen">
 
                       <mat-card-actions>
                         <button mat-button color="primary" [ngClass]="{'liked': postLiked}" (click)="toggleLike()">
