--- a/src/app/pages/home/header/header.component.scss
+++ b/src/app/pages/home/header/header.component.scss
@@ -12,11 +12,13 @@
         display: none;
       }
   }
-  .imOrVideoP {
+  .imUser {
     display: flex;
     justify-content: center;
     text-align: center;
-    width: 60px;
-    height: 60px;
+    width: 30px;
+    height: 30px;
   
   }
+  
+  
